# myersbriggs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/myersbriggs/: myersbriggs_chromosomalsex_human_enum.py  myersbriggs_datasource_interface_egress.py  myersbriggs_datasource_interface_ingress.py  myersbriggs_datasourceparameters_egress.py  myersbriggs_datasourceparameters_ingress.py  myersbriggs_multiverse.py  myersbriggs_person.py  myersbriggs_personality_deviationmeter.py  myersbriggs_personality_entity.py  myersbriggs_personality_enum.py  myersbriggs_socialinteractionsimulator.py  myersbriggs_socialinteractionsurface_hexagon.py  myersbriggs_socialmedia.py  myersbriggs_socialmedia_egress.py  myersbriggs_socialmedia_ingress.py  myersbriggs_socialnetwork.py  myersbriggs_universe.py
src/myersbriggs/utils/: myersbriggs_util.py
